clang/test/BSC/Negative/Ownership/Owned/deref_assign_struct/deref_assign_struct.cbs
// RUN: %clang_cc1 -verify %s

_Safe T* _Owned safe_malloc<T>(T value);
_Safe void strict_free(void* _Owned p);

typedef struct {
    int a;
} Plain;


typedef struct {
    int *_Owned p;
} Inner1;

typedef struct {
    Inner1 *_Owned p;
} Outer1;

typedef struct {
    int *_Owned p;
    int a;
} Inner2;

typedef struct {
    Inner2 *_Owned p;
    int b;
} Outer2;

typedef struct {
    int *_Owned p;
    int *_Owned q;
} Inner3;

typedef struct {
    Inner3 *_Owned x;
    Inner3 *_Owned y;
} Outer3;

void lhs_inner1_has_owned(Inner1 *_Owned p, Inner1 val) {
    *p = val; // expected-error {{assign to _Owned value: `p`}}
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p);
}

void lhs_outer1_has_owned(Outer1 *_Owned p, Outer1 val) {
    *p = val; // expected-error {{assign to _Owned value: `p`}}
    strict_free((void *_Owned) p->p->p);
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p);
}

void lhs_inner2_has_owned(Inner2 *_Owned p, Inner2 val) {
    p->a = 1;
    *p = val; // expected-error {{assign to _Owned value: `p`}}
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p);
}

void lhs_outer2_has_owned(Outer2 *_Owned p, Outer2 val) {
    p->b = 2;
    *p = val; // expected-error {{assign to _Owned value: `p`}}
    strict_free((void *_Owned) p->p->p);
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p);
}

void lhs_inner3_partial_moved(Inner3 *_Owned p, Inner3 val) {
    strict_free((void *_Owned) p->p);
    *p = val; // expected-error {{assign to partially moved value: `p`, p.p is moved}}
    strict_free((void *_Owned) p->q);
    strict_free((void *_Owned) p);
}

void lhs_inner3_conditional_partial_moved(Inner3 *_Owned p, Inner3 val, _Bool cond) {
    if (cond) {
        strict_free((void *_Owned) p->p);
    }
    *p = val; // expected-error {{assign to _Owned value: `p`}}
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p->q);
    strict_free((void *_Owned) p);
}

void lhs_outer3_partial_moved(Outer3 *_Owned p, Outer3 val) {
    strict_free((void *_Owned) p->x->p);
    *p = val; // expected-error {{assign to partially moved value: `p`, p.x.p is moved}}
    strict_free((void *_Owned) p->x->q);
    strict_free((void *_Owned) p->x);
    strict_free((void *_Owned) p->y->p);
    strict_free((void *_Owned) p->y->q);
    strict_free((void *_Owned) p->y);
    strict_free((void *_Owned) p);
}

void lhs_outer3_conditional_partial_moved(Outer3 *_Owned p, Outer3 val, _Bool flag) {
    if (flag) {
        strict_free((void *_Owned) p->x->p);
    }
    *p = val; // expected-error {{assign to _Owned value: `p`}}
    strict_free((void *_Owned) p->x->p);
    strict_free((void *_Owned) p->x->q);
    strict_free((void *_Owned) p->x);
    strict_free((void *_Owned) p->y->p);
    strict_free((void *_Owned) p->y->q);
    strict_free((void *_Owned) p->y);
    strict_free((void *_Owned) p);
}

void rhs_inner3_partial_moved(Inner3 *_Owned p, Inner3 val) {
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p->q);
    strict_free((void *_Owned) val.p);

    *p = val; // expected-error {{use of partially moved value: `val`, val.p is moved}}

    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p->q);
    strict_free((void *_Owned) p);
}

void rhs_inner3_reference(Inner3 *_Owned p, Inner3 val) {
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p->q);

    *p = val;

    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p->q);
    strict_free((void *_Owned) p);
}

void rhs_outer2_partial_moved(Outer2 *_Owned p, Outer2 val) {
    strict_free((void *_Owned) p->p->p);
    strict_free((void *_Owned) p->p);

    strict_free((void *_Owned) val.p->p);
    *p = val; // expected-error {{use of partially moved value: `val`, val.p.p is moved}}

    strict_free((void *_Owned) p->p->p);
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p);
}

void rhs_outer2_reference(Outer2 *_Owned p, Outer2 val) {
    strict_free((void *_Owned) p->p->p);
    strict_free((void *_Owned) p->p);

    *p = val;

    strict_free((void *_Owned) p->p->p);
    strict_free((void *_Owned) p->p);
    strict_free((void *_Owned) p);
}


int *_Owned assign_after_free_basic(int *_Owned p, int val) {
    strict_free((void *_Owned) p);
    *p = val; // expected-error {{use of moved value: `p`}}
    return p; // expected-error {{use of moved value: `p`}}
}

int *_Owned assign_after_conditional_free_basic(int *_Owned p, int val, _Bool flag) {
    if (flag) {
        strict_free((void *_Owned) p);
    }
    *p = val; // expected-error {{use of moved value: `p`}}
    return p; // expected-error {{use of moved value: `p`}}
}

Plain *_Owned assign_after_free_custom(Plain *_Owned p, Plain val){
    strict_free((void *_Owned) p);
    *p = val; // expected-error {{use of moved value: `p`}}
    return p; // expected-error {{use of moved value: `p`}}
}

Plain *_Owned assign_after_conditional_free_custom(Plain *_Owned p, Plain val, _Bool flag){
    if (flag) {
        strict_free((void *_Owned) p);
    }
    *p = val; // expected-error {{use of moved value: `p`}}
    return p; // expected-error {{use of moved value: `p`}}
}

_Safe Plain *_Owned _Nullable assign_after_definite_null_custom(Plain *_Owned _Nullable p, Plain val){
    if (p == nullptr) {
        *p = val; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    return p;
}

_Safe Plain *_Owned _Nullable assign_after_maybe_null_custom(Plain *_Owned _Nullable p, Plain val, _Bool flag){
    if (flag) {
        if (p != nullptr) {
            strict_free((void *_Owned) p);
            p = nullptr;
        }
    }
    *p = val; // expected-error {{nullable pointer cannot be dereferenced}}
    return p;
}
